--- a/web/advert/app/config.ini
+++ b/web/advert/app/config.ini
@@ -4,14 +4,14 @@ UI=view/http/
 AUTOLOAD=app/
 
 ;'ru' or 'en'. Create file /view/lang/{lang}.php to add new languages
-lang="ru"
+lang="en"
 ;Dark mode not implemented, change to 1, and edit /view/http/css/styles.dark.less
 ;Use get argument '?cs' to compile .less to .css (ex. http://yousite.ru/advert?cs)
-dark_mode=0
+dark_mode=1
 pass="CHANGEME"
 
 ;DB credentials
-db_host="localhost"
+db_host="YOURHOST"
 db_name="DBNAME"
 db_user="DBUSER"
 db_pass="DBPASS"
